@@ -13,6 +13,9 @@ Working version
 
 ### Other libraries:
 
+- #14020: Add Unix.unsetenv.
+  (Nicolás Ojeda Bär, review by Antonin Décimo and David Allsopp)
+
 ### Tools:
 
 * #13638: ocamlmklib exits with code 4 if passed an unrecognised option, as it
